--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     height: 100vh;
     display: flex;
@@ -16,14 +22,21 @@ body {
     background-color: lightcyan;
     height: 80px;
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
     padding: 10px;
-    align-items: center;
+}
+
+.display-history {
+    font-size: 12px;
 }
 
 .display-text {
     font-size: 30px;
 }
+
+
 
 .row {
     display: flex;
